--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ document.addEventListener("deviceready",onDeviceReady,
 false);
 }
 function onDeviceReady() {
-navigator.notification.alert("PhoneGap is ready!");
+//navigator.notification.alert("PhoneGap is ready!");
+navigator.notification.confirm("PhoneGap is ready!");
 }
 </script>
 
