--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ false);
 }
 function onDeviceReady() {
 //navigator.notification.alert("PhoneGap is ready!");
-navigator.notification.confirm("PhoneGap is ready!");
+//navigator.notification.confirm("PhoneGap is ready!");
+navigator.notification.prompt("PhoneGap is ready!");
 }
 </script>
 
