--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@ function onDeviceReady() {
 //navigator.notification.confirm("PhoneGap is ready!");
 navigator.notification.prompt("PhoneGap is ready!");
 }
+function playBeep() {
+        navigator.notification.beep(3);
+}
 </script>
 
 </head>
