--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@ function onDeviceReady() {
 navigator.notification.alert("PhoneGap is ready!");
 //navigator.notification.confirm("PhoneGap is ready!");
 //navigator.notification.prompt("PhoneGap is ready!");
-}
 function playBeep() {
         navigator.notification.beep(2);
+}
+function vibrate() {
+        navigator.notification.vibrate(2000);
+}
 }
 </script>
 
