--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ navigator.notification.alert("Wawawa",alertDismissed,"Lalala","fin");
 navigator.notification.beep(2);
 navigator.notification.vibrate(7000);
 }
+function alertDismissed() {   // do something
+}
 </script>
 
 </head>
